add navigation to index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
    
+   <nav>
+      <ul>
+         <l3>link 1</l3>
+         <l3>link 2</l3>
+         <l3>link 3</l3>
+      </ul>
+   </nav>
 </body>
 </html>
