--- a/index.html
+++ b/index.html
@@ -1,23 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-</head>
-<body>
-   <h1>branch develop</h1>
-   <nav>
-      <ul>
-         <l3>link 1</l3>
-         <l3>link 2</l3>
-         <l3>link 3</l3>
-      </ul>
-   </nav>
-   <section>
-      <h2>header</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur id non totam nostrum ipsa. Excepturi ipsa provident labore sint atque!</p>
-   </section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <form action="/test" method="GET" enctype="multipart/form-data">
+      <input type="color" name="" id="" />
+      <input type="date" name="" id="" />
+      <input type="datetime" name="" id="" />
+      <input type="datetime-local" name="" id="" />
+      <input type="month" name="" id="" />
+      <input type="time" name="" id="" />
+      <input type="week" name="" id="" />
+
+      <input type="file" name="" id="" />
+
+      <input type="number" name="" id="" />
+      <input type="range" name="" id="" />
+
+      <input type="search" name="" id="" />
+      <fieldset>
+        <legend>user name</legend>
+        <label for="fname" class="flex">
+          <span>First Name</span>
+          <input
+            autofocus
+            type="text"
+            placeholder="First Name"
+            name="firstName"
+            required
+          />
+        </label>
+        <label for="lname" class="flex">
+          <span>Last Name</span>
+          <input
+            type="email"
+            placeholder="Last Name"
+            name="lastName"
+            required
+            autocomplete="name"
+          />
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>personal data</legend>
+        <label for="lname" class="flex">
+          <span>Email</span>
+          <input type="text" placeholder="Email" name="lastName" required />
+        </label>
+        <label for="pass" class="flex">
+          <span>Password</span>
+          <input type="password" name="" id="pass" />
+        </label>
+
+        <label class="flex">
+          <span>Male</span>
+          <input value="male" type="radio" name="state" required checked />
+        </label>
+        <label class="flex">
+          <span>Female</span>
+          <input value="female" type="radio" name="state" />
+        </label>
+        <label class="flex">
+          <span>Are you adult?</span>
+          <input value="female" type="checkbox" name="chk1" />
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Optional data</legend>
+        <label class="flex">
+          <span>HTML</span>
+          <input value="html" type="checkbox" name="course" />
+        </label>
+        <label class="flex">
+          <span>CSS</span>
+          <input value="css" type="checkbox" name="course" />
+        </label>
+        <label class="flex">
+          <span>JS</span>
+          <input value="js" type="checkbox" name="course" />
+        </label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+
+        <select name="town">
+          <optgroup label="grp1">
+            <option value="1" selected>Zp</option>
+            <option value="2">Kv</option>
+            <option value="3">Dn</option>
+          </optgroup>
+          <optgroup label="grp1">
+            <option value="1">Zp</option>
+            <option value="2">Kv</option>
+            <option value="3">Dn</option>
+          </optgroup>
+        </select>
+      </fieldset>
+      <label>
+        <span>Town</span>
+        <datalist id="townList">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+          <option value="dnipro"></option>
+        </datalist>
+        <input type="text" placeholder="Town" name="town" list="townList" />
+      </label>
+      <div class="btn-block">
+        <input type="reset" value="reset" />
+        <input type="submit" value="submit" />
+      </div>
+    </form>
+  </body>
 </html>
